STOP and redo with Helmert coding

--- a/notebooks/roman2020.Rmd
+++ b/notebooks/roman2020.Rmd
@@ -359,7 +359,7 @@ Based on the data, we assume the following structural model:
 
 $$FRR_i = Bernoulli(p_i)$$
 $$\begin{aligned}
-logit^{-1}(p_i) &= \beta_0 + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\ &\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
+logit(p_i) &= \beta_0 + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\ &\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
 &\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}}
 \end{aligned}$$
 $$\beta_{.} \sim Normal(0, 10)$$
@@ -395,6 +395,16 @@ scenario_completed.model.t = add_criterion(scenario_completed.model.t, "waic")
 scenario_completed.model.t = add_criterion(scenario_completed.model.t, "loo", reloo = T)
 saveModel(scenario_completed.model.t)
 
+scenario_completed.model.t = brm(
+  scenario_completed ~ 0 + Intercept + (suggestion_type + noise_level) + (gender + age_group + robot_experience) + num_optimal,
+  family = "bernoulli",
+  prior = set_prior("normal(0, 10)", class = "b"),
+  data = plot_df,
+  seed = default_seed,
+  save_all_pars = T,
+  sample_prior = T
+)
+
 # The values model, to see if specific values of the noise level variable are significant
 scenario_completed.model.v = brm(
   scenario_completed ~ 0 + Intercept + (has_ax_only + has_dx_only + has_dxax + noise_level_f) + (gender + age_group + robot_experience) + num_optimal,
@@ -428,6 +438,8 @@ print(performance::r2(scenario_completed.model.t))
 
 print(tidy_stan(scenario_completed.model.v))
 print(performance::r2(scenario_completed.model.v))
+
+# TODO: parameters::model_parameters(scenario_completed.model.t, centrality = "median", ci = 0.89, ci_method = "hdi", test = c("pd", "rope"), rope_range = c(-0.055, 0.055), rope_ci = 1, effects = "fixed")
 ```
 
 ## Diagnostic
@@ -543,7 +555,7 @@ grid.arrange(p1, p3, p5, p2, p4, p6, nrow = 2, ncol = 3)
 rm(p0, p1, p2, p3, p4, p5, p6)
 ```
 
-We are able to recreate the data, and there is a mild improvement in the recreation / prediction as a result of our model. So we are fine, I think.
+We are able to recreate the data, and there is a mild improvement in the recreation / prediction as a result of our model.
 
 ## Inference
 
@@ -934,7 +946,7 @@ gg_df =
     mutate(optimal_ax = factor(optimal_ax)) %>%
     mutate(user_id = factor(user_id)) %>%
     mutate(optimal_ax = fct_recode(optimal_ax, incorrect="0", correct = "1")) %>%
-    count(suggestion_type, noise_level, optimal_ax, num_actions,
+    count(user_id, suggestion_type, noise_level, optimal_ax, num_actions,
           name = "num_optimal_ax")
 
 gg_df %>%
@@ -957,87 +969,41 @@ gg_df %>%
     scale_fill_economist() +
     theme(legend.position = "bottom")
 
-# Visualize the data facetted by the variables that we care about
 p1 = gg_df %>%
   filter(optimal_ax == "correct") %>%
-  ggplot(aes(has_ax, num_optimal_ax / num_actions, fill=.fill_column)) +
-    geom_boxplot() +
-    geom_count() +
-    facet_grid(rows = vars(noise_level), cols = vars(has_dx), labeller = label_both) +
-    labs(y = "Fraction correct actions") +
-    scale_fill_economist() +
-    theme(legend.position = "left")
+  ggplot(aes(suggestion_type, num_optimal_ax / num_actions)) +
+    geom_violin() +
+    geom_point(aes(color = paste(suggestion_type, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .2, height = 0)) +
+    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
+    scale_color_metro() +
+    ylim(0, 1) +
+    legend_none()
 
 p2 = gg_df %>%
   filter(optimal_ax == "correct") %>%
-  ggplot(aes(has_dx, num_optimal_ax / num_actions, fill=.fill_column)) +
-    geom_boxplot() +
-    geom_count() +
-    facet_grid(rows = vars(noise_level), cols = vars(has_ax), labeller = label_both) +
-    labs(y = "Fraction correct actions") +
-    scale_fill_economist() +
-    legend_none()
-
-p3 = gg_df %>%
-  filter(optimal_ax == "correct") %>%
-  mutate(noise_level = fct_rev(noise_level)) %>%
-  mutate(has_ax = factor(has_ax)) %>%
-  mutate(has_ax = fct_rev(has_ax)) %>%
-  ggplot(aes(noise_level, num_optimal_ax / num_actions, fill=.fill_column)) +
-    geom_boxplot() +
-    geom_count() +
-    facet_grid(rows = vars(has_ax), cols = vars(has_dx), labeller = label_both) +
-    labs(y = "Fraction correct actions") +
-    scale_fill_economist() +
-    legend_none()
-
-grid.arrange(p1, p2, p3, ncol = 3)
-
-# Visualize also the variation in each of the three levels that we care about
-p1 = gg_df %>%
-  filter(optimal_ax == 'correct') %>%
-  ggplot(aes(has_ax, num_optimal_ax/num_actions)) +
+  ggplot(aes(noise_level, num_optimal_ax / num_actions)) +
     geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
+    geom_point(aes(color = paste(suggestion_type, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(color = "AX:DX:Noise") +
-    theme(legend.position = "left") +
+    labs(color = "Type:Noise") +
+    theme(legend.position = "right") +
     guides(size = F)
 
-p2 = gg_df %>%
-  filter(optimal_ax == 'correct') %>%
-  ggplot(aes(has_dx, num_optimal_ax/num_actions)) +
-    geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
-    scale_color_metro() +
-    ylim(0, 1) +
-    legend_none()
-
-p3 = gg_df %>%
-  filter(optimal_ax == 'correct') %>%
-  ggplot(aes(noise_level, num_optimal_ax/num_actions)) +
-    geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
-    scale_color_metro() +
-    ylim(0, 1) +
-    scale_x_discrete(limits = rev(levels(gg_df$noise_level))) +
-    legend_none()
-
-grid.arrange(p1, p2, p3, ncol = 3)
+grid.arrange(p1, p2, ncol = 2)
 ```
 
 ## Model
 
 Based on the data, we assume the following structural model:
 
-$$rax_{ij} = Bernoulli(p_{ij})$$
+$$RAX_{ij} = Bernoulli(p_{ij})$$
 $$\begin{aligned}
-logit^{-1}(p_{ij}) &= \beta_0 + \beta_{0i} + \beta_{ax}\text{ax}_i + \beta_{dx}\text{dx}_i + \beta_{noise}\text{noise}_i +\\
-&\beta_{ax:noise}\text{ax}_i\text{noise}_i + \beta_{dx:noise}\text{dx}_i\text{noise}_i + \\
+logit^{-1}(p_{ij}) &= \beta_0 + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\
+&\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
 &\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}} + \beta_{state} \text{state}_{ij}
 \end{aligned}$$
 $$\begin{aligned}
@@ -1134,11 +1100,13 @@ plot(optimal_ax.model.v$criteria$loo, main = "Values Model")
 
 # Include posterior predictive checks of the sampling (are sampling according
 # to the data that we actually have?)
+p0 = pp_check(optimal_ax.model.null, type = "bars", stat = "median") + ggtitle("null model")
+
 p1 = pp_check(optimal_ax.model.t, type = "bars_grouped", group = "has_ax_only", stat = "median") + ggtitle("t:has_ax")
 p2 = pp_check(optimal_ax.model.t, type = "bars_grouped", group = "has_dx_only", stat = "median") + ggtitle("t:has_dx")
 p3 = pp_check(optimal_ax.model.t, type = "bars_grouped", group = "has_dxax", stat = "median") + ggtitle("t:has_dxax")
 p4 = pp_check(optimal_ax.model.t, type = "bars_grouped", group = "noise_level", stat = "median") + ggtitle("t:noise_level")
-grid.arrange(p1, p2, p3, p4, nrow = 2, ncol = 2)
+grid.arrange(p1, p2, p3, p4, p0, nrow = 3, ncol = 2)
 mcmc_intervals(as.matrix(optimal_ax.model.t), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
   ggtitle("Trends Model")
 
@@ -1146,7 +1114,7 @@ p1 = pp_check(optimal_ax.model.v, type = "bars_grouped", group = "has_ax_only", 
 p2 = pp_check(optimal_ax.model.v, type = "bars_grouped", group = "has_dx_only", stat = "median") + ggtitle("v:has_dx")
 p3 = pp_check(optimal_ax.model.v, type = "bars_grouped", group = "has_dxax", stat = "median") + ggtitle("v:has_dxax")
 p4 = pp_check(optimal_ax.model.v, type = "bars_grouped", group = "noise_level_f", stat = "median") + ggtitle("v:noise_level")
-grid.arrange(p1, p2, p3, p4, nrow = 2, ncol = 2)
+grid.arrange(p1, p2, p3, p4, p0, nrow = 3, ncol = 2)
 mcmc_intervals(as.matrix(optimal_ax.model.v), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
   ggtitle("Values Model")
 
@@ -1219,6 +1187,7 @@ p6 =
       scale_fill_gradient(limits = c(0, 1))
 
 grid.arrange(p1, p3, p5, p2, p4, p6, nrow = 2, ncol = 3)
+rm(p0, p1, p2, p3, p4, p5, p6)
 ```
 
 ## Inference
@@ -1242,9 +1211,9 @@ options(digits = 3)
 h_df = as_tibble(insight::get_parameters(optimal_ax.model.t)) %>%
   transmute(
     Intercept = b_Intercept,
-    has_ax_test = -2 * b_has_ax_only1,
-    has_dx_test = -2 * b_has_dx_only1,
-    has_dxax_test = -2 * b_has_dxax1,
+    has_ax_test = -b_has_ax_only1,
+    has_dx_test = -b_has_dx_only1,
+    has_dxax_test = -b_has_dxax1,
     noise_levelL_test = b_noise_level.L,
     noise_levelQ_test = b_noise_level.Q
   )
@@ -1255,9 +1224,9 @@ print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, 
 h_df = as_tibble(insight::get_parameters(optimal_ax.model.v)) %>%
   transmute(
     Intercept = b_Intercept,
-    has_ax_test = -2 * b_has_ax_only1,
-    has_dx_test = -2 * b_has_dx_only1,
-    has_dxax_test = -2 * b_has_dxax1,
+    has_ax_test = -b_has_ax_only1,
+    has_dx_test = -b_has_dx_only1,
+    has_dxax_test = -b_has_dxax1,
     noise_level1_test = b_noise_level_f1,
     noise_level2_test = b_noise_level_f2,
     noise_level3_test = - b_noise_level_f1 - b_noise_level_f2
@@ -1271,10 +1240,15 @@ options(digits = 7)
 **Results**:
 
 1. AX suggestions
-    - Positive effect pd = 100%
-    - Median = 1.24, 89% CI [0.76, 1.78]
-    - Small, Std.Median = 0.32
-    - 0.0% in ROPE
+    - Positive effect pd = 96.4%
+    - Median = 0.5, 89% CI [0.06, 0.95]
+    - Small, Std.Median = 0.28
+    - 3.43% in ROPE (n.s.)
+1. DXAX suggestions
+    - Positive effect pd = 98.3%
+    - Median = 0.58, 89% CI [0.15, 1.01]
+    - Small, Std.Median = 0.28
+    - 1.85% in ROPE
 
 (The ROPE is defined as [-0.055, 0.055]. It is the range is suggested in the literature for logistic models and it corresponds to a probability range of 0.11. Therefore, a probability change of less than 0.055 is considered no different from a probability change of 0)
 
@@ -1288,21 +1262,22 @@ gg_df = plot_df %>%
     mutate(user_id = factor(user_id)) %>%
     mutate(optimal_ax = fct_recode(optimal_ax, incorrect="0", correct = "1")) %>%
     mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
-    count(user_id, study_condition, .fill_column, optimal_ax, num_actions, has_ax, has_dx, noise_level,
+    count(user_id, study_condition, .fill_column, optimal_ax, num_actions, has_ax_only, has_dx_only, has_dxax, noise_level,
           name = "num_optimal_ax")
 
 # Simulate predictions on new data
 p_df =
   plot_df %>%
   data_grid(optimal_ax,
-            has_ax,
-            has_dx,
+            has_ax_only,
+            has_dx_only,
+            has_dxax,
             noise_level_f,
             gender,
             age_group,
             robot_experience,
-            num_optimal,
-            state_idx_rescaled = seq_range(state_idx_rescaled, n = 4),
+            num_optimal = seq_range(num_optimal, n = 2),
+            state_idx_rescaled = seq_range(state_idx_rescaled, n = 3),
             .model = optimal_ax.model.v)
 
 fits_p_df = p_df %>% add_fitted_draws(optimal_ax.model.v,
@@ -1310,51 +1285,66 @@ fits_p_df = p_df %>% add_fitted_draws(optimal_ax.model.v,
                                       n = 20,
                                       seed = default_seed)
 gc()
-# We don't want predicted draws because that's a raw count of ones and zeros; not the
-# probability distribution
-# preds_p_df = p_df %>% add_predicted_draws(scenario_completed.model.v)
 
-# Plot the posterior distributions
-rope_value = gg_df %>%
-  filter(optimal_ax == 'correct', has_ax == F) %>%
-  summarise(.value = median(num_optimal_ax / num_actions)) %>%
-  pull(.value)
+# Plot the posterior distributions. In each of the following, the reference ROPE band
+# can be marked based on 3 methods. Make sure to update that ROPE value baased on the
+# method that we want to display.
+
+# If centering the ROPE on the Intercept (NULL or Fitted?)
+# rope_value = inv_logit_scaled(fixef(optimal_ax.model.null)["Intercept", "Estimate"])
+rope_value = inv_logit_scaled(fixef(optimal_ax.model.t)["Intercept", "Estimate"])
+
+# If centering the ROPE on the actual data
+# rope_value = gg_df %>%
+#   filter(optimal_ax == 'correct', has_ax == F) %>%
+#   summarise(.value = median(num_optimal_ax / num_actions)) %>%
+#   pull(.value)
+
 gg_df %>%
   filter(optimal_ax == 'correct') %>%
-  ggplot(aes(x = has_ax, y = num_optimal_ax / num_actions)) +
+  ggplot(aes(x = has_ax_only, y = num_optimal_ax / num_actions)) +
     geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
               xmin = -Inf, xmax = Inf,
               color = "transparent", fill = "white") +
     annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
     stat_halfeye(aes(y = .value), data = fits_p_df, position = position_nudge(x = 0.1)) +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
+    geom_point(aes(color = paste(has_ax_only, has_dx_only, has_dxax, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
     stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(y = "correct_ax", color = "AX:DX:Noise")
+    labs(y = "correct_ax", color = "AX:DX:DXAX:Noise")
 
-rope_value = gg_df %>%
-  filter(optimal_ax == 'correct', has_dx == F) %>%
-  summarise(.value = median(num_optimal_ax / num_actions)) %>%
-  pull(.value)
 gg_df %>%
   filter(optimal_ax == 'correct') %>%
-  ggplot(aes(x = has_dx, y = num_optimal_ax / num_actions)) +
+  ggplot(aes(x = has_dx_only, y = num_optimal_ax / num_actions)) +
     geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
               xmin = -Inf, xmax = Inf,
               color = "transparent", fill = "white") +
     annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
     stat_halfeye(aes(y = .value), data = fits_p_df, position = position_nudge(x = 0.1)) +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
+    geom_point(aes(color = paste(has_ax_only, has_dx_only, has_dxax, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
     stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(y = "correct_ax", color = "AX:DX:Noise")
+    labs(y = "correct_ax", color = "AX:DX:DXAX:Noise")
 
-rope_value = gg_df %>%
-  filter(optimal_ax == 'correct', noise_level == "0.0") %>%
-  summarise(.value = median(num_optimal_ax / num_actions)) %>%
-  pull(.value)
+gg_df %>%
+  filter(optimal_ax == 'correct') %>%
+  ggplot(aes(x = has_dxax, y = num_optimal_ax / num_actions)) +
+    geom_rect(ymin = rope_value-0.055, ymax = rope_value+0.055,
+              xmin = -Inf, xmax = Inf,
+              color = "transparent", fill = "white") +
+    annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
+    stat_halfeye(aes(y = .value), data = fits_p_df, position = position_nudge(x = 0.1)) +
+    geom_point(aes(color = paste(has_ax_only, has_dx_only, has_dxax, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
+    scale_color_metro() +
+    ylim(0, 1) +
+    labs(y = "correct_ax", color = "AX:DX:DXAX:Noise")
+
 gg_df %>%
   filter(optimal_ax == 'correct') %>%
   mutate(noise_level = fct_rev(noise_level)) %>%
@@ -1364,42 +1354,54 @@ gg_df %>%
               color = "transparent", fill = "white") +
     annotate("text", x = 0.5, y = rope_value, label = "ROPE", angle = 90) +
     stat_halfeye(aes(y = .value, x = noise_level_f), data = fits_p_df, position = position_nudge(x = 0.1)) +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep = ":")), size = 2) +
+    geom_point(aes(color = paste(has_ax_only, has_dx_only, has_dxax, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
     stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(y = "correct_ax", color = "AX:DX:Noise")
+    labs(y = "correct_ax", color = "AX:DX:DXAX:Noise")
 
 # Remove the giant fits data frames
 rm(fits_p_df, p_df, gg_df)
 ```
 
 ```{r, eval=plot_posteriors}
-plot_df = actions %>%
-  select(X1, id, user_id, study_condition, start_condition, num_optimal,
-         state_idx, state_idx_rescaled,
-         age_group, gender, robot_experience,
-         noise_level, noise_level_f, has_noise, has_dx, has_ax,
-         scenario_completed, num_actions, optimal_ax) %>%
-  mutate(scenario_completed = factor(scenario_completed)) %>%
-  mutate(scenario_completed = fct_recode(scenario_completed, Unresolved="0", Resolved = "1"),
-         has_ax = fct_recode(has_ax, "No AX"="FALSE", "AX"="TRUE"),
-         has_dx = fct_recode(has_dx, "No DX"="FALSE", "DX"="TRUE"),
-         noise_level = fct_recode(noise_level, "Acc: 100%"="0.0", "Acc: 90%"="1.0", "Acc: 80%"="2.0"))
-
 eff = fixef(optimal_ax.model.v)
 
 gg_df = plot_df %>%
-  mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
-  count(user_id, study_condition, .fill_column, optimal_ax, num_actions, has_ax, has_dx, noise_level,
+  mutate(scenario_completed = factor(scenario_completed)) %>%
+  mutate(scenario_completed = fct_recode(scenario_completed, Unresolved="0", Resolved = "1"),
+         has_ax_only = fct_recode(has_ax_only, "No AX"="FALSE", "AX"="TRUE"),
+         has_dx_only = fct_recode(has_dx_only, "No DX"="FALSE", "DX"="TRUE"),
+         has_dxax = fct_recode(has_dxax, "No DXAX"="FALSE", "DXAX"="TRUE"),
+         noise_level = fct_recode(noise_level, "Acc: 100%"="0.0", "Acc: 90%"="1.0", "Acc: 80%"="2.0")) %>%
+  count(user_id, study_condition, optimal_ax, num_actions, has_ax_only, has_dx_only, has_dxax, noise_level,
         name = "num_optimal_ax") %>%
-  mutate(estimate = -1) %>%
-  mutate(estimate = if_else(has_ax == "No AX", inv_logit_scaled(eff["Intercept", "Estimate"] + eff["has_ax1","Estimate"]), estimate)) %>%
-  mutate(estimate = if_else(has_ax == "AX", inv_logit_scaled(eff["Intercept", "Estimate"] - eff["has_ax1", "Estimate"]), estimate))
+  mutate(estimate = -1)
 
-gg_df %>%
+p_df = gg_df %>%
+  mutate(estimate = if_else(has_ax_only == "No AX", inv_logit_scaled(eff["Intercept", "Estimate"] + eff["has_ax_only1","Estimate"]), estimate)) %>%
+  mutate(estimate = if_else(has_ax_only == "AX", inv_logit_scaled(eff["Intercept", "Estimate"] - eff["has_ax_only1", "Estimate"]), estimate))
+p1 = p_df %>%
   filter(optimal_ax == "1") %>%
-  ggplot(aes(has_ax, num_optimal_ax / num_actions, group = has_ax, colour=has_ax)) +
+  ggplot(aes(has_ax_only, num_optimal_ax / num_actions, group = has_ax_only, colour=has_ax_only)) +
+    geom_count(aes(colour = NULL)) +
+    geom_boxplot(aes(y = estimate)) +
+    # geom_signif(y_position = 1.07, xmin = 1, xmax = 2, annotation = "n.s.", textsize = 8, color = "black") +
+    scale_y_continuous(limits = c(0.0, 1.1), breaks = c(0.0, 0.5, 1.0)) +
+    labs(y = NULL, x = NULL) +
+    scale_colour_manual(values = c("#d62728", "#2ca02c", "#ff7f0e")) +
+    theme_economist_white(base_size = 13) +
+    theme(plot.background = element_rect(fill = "white"),
+          axis.title.y = element_blank()) +
+    legend_none()
+
+p_df = gg_df %>%
+  mutate(estimate = if_else(has_dxax == "No DXAX", inv_logit_scaled(eff["Intercept", "Estimate"] + eff["has_dxax1","Estimate"]), estimate)) %>%
+  mutate(estimate = if_else(has_dxax == "DXAX", inv_logit_scaled(eff["Intercept", "Estimate"] - eff["has_dxax1", "Estimate"]), estimate))
+p2 = p_df %>%
+  filter(optimal_ax == "1") %>%
+  ggplot(aes(has_dxax, num_optimal_ax / num_actions, group = has_dxax, colour=has_dxax)) +
     geom_count(aes(colour = NULL)) +
     geom_boxplot(aes(y = estimate)) +
     geom_signif(y_position = 1.07, xmin = 1, xmax = 2, annotation = "*", textsize = 8, color = "black") +
@@ -1410,6 +1412,8 @@ gg_df %>%
     theme(plot.background = element_rect(fill = "white"),
           axis.title.y = element_blank()) +
     legend_none()
+
+grid.arrange(p1, p2, ncol = 2)
 ```
 
 ```{r, echo=F, results=F, message=F, warning=F}
@@ -1429,7 +1433,7 @@ plot_df = actions %>%
   select(X1, id, user_id, study_condition, start_condition, num_optimal,
          state_idx, state_idx_rescaled,
          age_group, gender, robot_experience,
-         noise_level, noise_level_f, has_noise,
+         noise_level, noise_level_f, has_noise, suggestion_type,
          has_dx, has_ax, has_ax_only, has_dx_only, has_dxax,
          scenario_completed, num_actions, optimal_dx)
 
@@ -1439,17 +1443,17 @@ text_short(report(plot_df))
 ## Data
 
 ```{r fig.height=7, fig.width=15}
+# Plot by the study condition
 gg_df =
   plot_df %>%
     mutate(noise_level = fct_rev(noise_level)) %>%
     mutate(optimal_dx = factor(optimal_dx)) %>%
     mutate(user_id = factor(user_id)) %>%
     mutate(optimal_dx = fct_recode(optimal_dx, incorrect="0", correct = "1")) %>%
-    mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
-    count(user_id, study_condition, .fill_column, optimal_dx, num_actions, has_ax, has_dx, noise_level,
+    mutate(.fill_column = suggestion_type) %>%
+    count(user_id, study_condition, .fill_column, optimal_dx, num_actions, has_ax_only, has_dx_only, has_dxax, noise_level,
           name = "num_optimal_dx")
 
-# Plot by the study condition
 gg_df %>%
   ggplot(aes(user_id, num_optimal_dx / num_actions, fill=optimal_dx)) +
     geom_bar(stat="identity") +
@@ -1464,90 +1468,74 @@ gg_df %>%
   ggplot(aes(study_condition, num_optimal_dx / num_actions, fill=.fill_column)) +
     geom_violin() +
     geom_boxplot(width = 0.1) +
-    labs(y = "Fraction correct diagnoses", fill = "noise:has_suggestions") +
+    labs(y = "Fraction correct diagnoses", fill = "Suggestion Type") +
     scale_fill_economist()
 
-# Visualize the data facetted by the variables that we care about
-p1 = gg_df %>%
+# Plot by suggestion type
+gg_df =
+  plot_df %>%
+    mutate(noise_level = fct_rev(noise_level)) %>%
+    mutate(optimal_dx = factor(optimal_dx)) %>%
+    mutate(user_id = factor(user_id)) %>%
+    mutate(optimal_dx = fct_recode(optimal_dx, incorrect="0", correct = "1")) %>%
+    count(user_id, suggestion_type, noise_level, optimal_dx, num_actions,
+          name = "num_optimal_dx")
+
+gg_df %>%
   filter(optimal_dx == "correct") %>%
-  ggplot(aes(has_ax, num_optimal_dx / num_actions, fill=.fill_column)) +
+  ggplot(aes(suggestion_type, num_optimal_dx / num_actions, fill=suggestion_type)) +
     geom_boxplot() +
     geom_count() +
-    facet_grid(rows = vars(noise_level), cols = vars(has_dx), labeller = label_both) +
+    facet_grid(cols = vars(noise_level), labeller = label_both) +
     labs(y = "Fraction correct diagnoses") +
     scale_fill_economist() +
-    theme(legend.position = "left")
+    theme(legend.position = "bottom")
+
+gg_df %>%
+  filter(optimal_dx == "correct") %>%
+  ggplot(aes(noise_level, num_optimal_dx / num_actions, fill=suggestion_type)) +
+    geom_boxplot() +
+    geom_count() +
+    facet_grid(cols = vars(suggestion_type)) +
+    labs(y = "Fraction correct diagnoses") +
+    scale_fill_economist() +
+    theme(legend.position = "bottom")
+
+p1 = gg_df %>%
+  filter(optimal_dx == "correct") %>%
+  ggplot(aes(suggestion_type, num_optimal_dx / num_actions)) +
+    geom_violin() +
+    geom_point(aes(color = paste(suggestion_type, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .2, height = 0)) +
+    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
+    scale_color_metro() +
+    ylim(0, 1) +
+    legend_none()
 
 p2 = gg_df %>%
   filter(optimal_dx == "correct") %>%
-  ggplot(aes(has_dx, num_optimal_dx / num_actions, fill=.fill_column)) +
-    geom_boxplot() +
-    geom_count() +
-    facet_grid(rows = vars(noise_level), cols = vars(has_ax), labeller = label_both) +
-    labs(y = "Fraction correct diagnoses") +
-    scale_fill_economist() +
-    legend_none()
-
-p3 = gg_df %>%
-  filter(optimal_dx == "correct") %>%
-  mutate(noise_level = fct_rev(noise_level)) %>%
-  mutate(has_ax = factor(has_ax)) %>%
-  mutate(has_ax = fct_rev(has_ax)) %>%
-  ggplot(aes(noise_level, num_optimal_dx / num_actions, fill=.fill_column)) +
-    geom_boxplot() +
-    geom_count() +
-    facet_grid(rows = vars(has_ax), cols = vars(has_dx), labeller = label_both) +
-    labs(y = "Fraction correct diagnoses") +
-    scale_fill_economist() +
-    legend_none()
-
-grid.arrange(p1, p2, p3, ncol = 3)
-
-# Visualize also the variation in each of the three levels that we care about
-p1 = gg_df %>%
-  filter(optimal_dx == 'correct') %>%
-  ggplot(aes(has_ax, num_optimal_dx/num_actions)) +
+  ggplot(aes(noise_level, num_optimal_dx / num_actions)) +
     geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
+    geom_point(aes(color = paste(suggestion_type, noise_level, sep = ":")),
+               size = 2, position = position_jitter(width = .1, height = 0)) +
+    stat_summary(fun.y = median, geom = "point", shape = 23, size = 6) +
     scale_color_metro() +
     ylim(0, 1) +
-    labs(color = "AX:DX:Noise") +
-    theme(legend.position = "left") +
+    labs(color = "Type:Noise") +
+    theme(legend.position = "right") +
     guides(size = F)
 
-p2 = gg_df %>%
-  filter(optimal_dx == 'correct') %>%
-  ggplot(aes(has_dx, num_optimal_dx/num_actions)) +
-    geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
-    scale_color_metro() +
-    ylim(0, 1) +
-    legend_none()
-
-p3 = gg_df %>%
-  filter(optimal_dx == 'correct') %>%
-  ggplot(aes(noise_level, num_optimal_dx/num_actions)) +
-    geom_violin() +
-    geom_point(aes(color = paste(has_ax, has_dx, noise_level, sep=":"), size = 2)) +
-    stat_summary(fun.y = median, geom="point", shape=23, size = 6) +
-    scale_color_metro() +
-    ylim(0, 1) +
-    scale_x_discrete(limits = rev(levels(gg_df$noise_level))) +
-    legend_none()
-
-grid.arrange(p1, p2, p3, ncol = 3)
+grid.arrange(p1, p2, ncol = 2)
 ```
 
 ## Model
 
 Based on the data, we assume the following structural model:
 
-$$rdx_{ij} = Bernoulli(p_{ij})$$
+$$RDX_{ij} = Bernoulli(p_{ij})$$
 $$\begin{aligned}
-logit^{-1}(p_{ij}) &= \beta_0 + \beta_{0i} + \beta_{ax}\text{ax}_i + \beta_{dx}\text{dx}_i + \beta_{noise}\text{noise}_i +\\
-&\beta_{ax:noise}\text{ax}_i\text{noise}_i + \beta_{dx:noise}\text{dx}_i\text{noise}_i + \\
+logit^{-1}(p_{ij}) &= \beta_0 + \beta_{ax}\text{ax_only}_i + \beta_{dx}\text{dx_only}_i + \beta_{dxax}\text{dxax}_i +\\
+&\beta_{noise_L}\text{noise}_i + \beta_{noise_Q}\text{noise}_i +\\
 &\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}} + \beta_{state} \text{state}_{ij}
 \end{aligned}$$
 $$\begin{aligned}
@@ -1644,11 +1632,13 @@ plot(optimal_dx.model.v$criteria$loo, main = "Values Model")
 
 # Include posterior predictive checks of the sampling (are sampling according
 # to the data that we actually have?)
+p0 = pp_check(optimal_dx.model.null, type = "bars", stat = "median") + ggtitle("null model")
+
 p1 = pp_check(optimal_dx.model.t, type = "bars_grouped", group = "has_ax_only", stat = "median") + ggtitle("t:has_ax")
 p2 = pp_check(optimal_dx.model.t, type = "bars_grouped", group = "has_dx_only", stat = "median") + ggtitle("t:has_dx")
 p3 = pp_check(optimal_dx.model.t, type = "bars_grouped", group = "has_dxax", stat = "median") + ggtitle("t:has_dxax")
 p4 = pp_check(optimal_dx.model.t, type = "bars_grouped", group = "noise_level", stat = "median") + ggtitle("t:noise_level")
-grid.arrange(p1, p2, p3, p4, ncol = 2, nrow = 2)
+grid.arrange(p1, p2, p3, p4, p0, ncol = 2, nrow = 3)
 mcmc_intervals(as.matrix(optimal_dx.model.t), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
   ggtitle("Trends Model")
 
@@ -1656,7 +1646,7 @@ p1 = pp_check(optimal_dx.model.v, type = "bars_grouped", group = "has_ax_only", 
 p2 = pp_check(optimal_dx.model.v, type = "bars_grouped", group = "has_dx_only", stat = "median") + ggtitle("v:has_dx")
 p3 = pp_check(optimal_dx.model.v, type = "bars_grouped", group = "has_dxax", stat = "median") + ggtitle("v:has_dxax")
 p4 = pp_check(optimal_dx.model.v, type = "bars_grouped", group = "noise_level_f", stat = "median") + ggtitle("v:noise_level")
-grid.arrange(p1, p2, p3, p4, ncol = 2, nrow = 2)
+grid.arrange(p1, p2, p3, p4, p0, ncol = 2, nrow = 3)
 mcmc_intervals(as.matrix(optimal_dx.model.v), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
   ggtitle("Values Model")
 
@@ -1729,6 +1719,7 @@ p6 =
       scale_fill_gradient(limits = c(0, 1))
 
 grid.arrange(p1, p3, p5, p2, p4, p6, nrow = 2, ncol = 3)
+rm(p0, p1, p2, p3, p4, p5, p6)
 ```
 
 ## Inference
@@ -1752,9 +1743,9 @@ options(digits = 3)
 h_df = as_tibble(insight::get_parameters(optimal_dx.model.t)) %>%
   transmute(
     Intercept = b_Intercept,
-    has_ax_test = -2 * b_has_ax_only1,
-    has_dx_test = -2 * b_has_dx_only1,
-    has_dxax_test = -2 * b_has_dxax1,
+    has_ax_test = -b_has_ax_only1,
+    has_dx_test = -b_has_dx_only1,
+    has_dxax_test = -b_has_dxax1,
     noise_levelL_test = b_noise_level.L,
     noise_levelQ_test = b_noise_level.Q
   )
@@ -1765,9 +1756,9 @@ print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, 
 h_df = as_tibble(insight::get_parameters(optimal_dx.model.v)) %>%
   transmute(
     Intercept = b_Intercept,
-    has_ax_test = -2 * b_has_ax_only1,
-    has_dx_test = -2 * b_has_dx_only1,
-    has_dxax_test = -2 * b_has_dxax1,
+    has_ax_test = -b_has_ax_only1,
+    has_dx_test = -b_has_dx_only1,
+    has_dxax_test = -b_has_dxax1,
     noise_level1_test = b_noise_level_f1,
     noise_level2_test = b_noise_level_f2,
     noise_level3_test = - b_noise_level_f1 - b_noise_level_f2
@@ -1781,15 +1772,20 @@ options(digits = 7)
 **Results**:
 
 1. DX suggestions
+    - Positive effect pd = 96.9%
+    - Median = 0.41, 89% CI [0.06, 0.74]
+    - Small, Std.Median = 0.22
+    - 3.33% in ROPE (n.s.)
+1. DXAX suggestions
     - Positive effect pd = 98.4%
-    - Median = 0.54, 89% CI [0.12, 0.94]
-    - Small, Std.Median = 0.26
-    - 1.98% in ROPE
-1. Noise Level Linear
-    - Negative (negative slope) pd = 97.9%
-    - Median = -0.42, 89% CI [-0.78, -0.10]
+    - Median = 0.45, 89% CI [0.11, 0.79]
     - Small, Std.Median = 0.21
-    - 2.67% in ROPE (n.s.)
+    - 2.17% in ROPE
+1. Noise Level Linear
+    - Negative (negative slope) pd = 99.4%
+    - Median = -0.47, 89% CI [-0.81, -0.15]
+    - Small, Std.Median = 0.20
+    - 1.40% in ROPE
 
 (The ROPE is defined as [-0.055, 0.055]. It is the range is suggested in the literature for logistic models and it corresponds to a probability range of 0.11. Therefore, a probability change of less than 0.055 is considered no different from a probability change of 0)
 
